--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                 <img src="images/item-4.jpg" alt="" class="w-25 rounded-circle">
                 <img src="images/item-3.jpg" alt="" class="w-25 rounded-circle">
                 <img src="images/item-2.jpg" alt="" class="w-25 rounded-circle">
+                <img src="images/item-2.jpg" alt="" class="w-25 rounded-circle">
             </div>
         </div>
     </div>
