--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
         <div class="row">
             <div class="gradient pb-4 d-none d-lg-block"></div>
             <img src="./images/header-bg.jpg " alt="" class="w-100">
-            <div class="d-flex justify-content-around img-overlay">
+            <!-- <div class="d-flex justify-content-around img-overlay">
                 <img src="images/item-4.jpg" alt="" class="w-25 rounded-circle">
                 <img src="images/item-3.jpg" alt="" class="w-25 rounded-circle">
                 <img src="images/item-2.jpg" alt="" class="w-25 rounded-circle">
                 <img src="images/item-2.jpg" alt="" class="w-25 rounded-circle">
-            </div>
+            </div> -->
         </div>
     </div>
     <div class="container-fluid py-2">
