--- a/index.html
+++ b/index.html
@@ -16,28 +16,28 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--css link-->
     <link rel="stylesheet" href="style.css">
+
+    <!-- Navbar start here -->
     <div class="container">
         <nav class="navbar navbar-expand-sm navbar-light bg-white fixed-top">
             <div class="container">
                 <a class="navbar-brand text-green font-family-logo fw-bolder fs-2" href="index.html">Luxe
                     Home</a>
-
                 <div class="dropdown">
                     <button class="btn btn-tansparent dropdown-toggle border-0 font-family text-green nobtnhover"
                         type="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Department
                     </button>
-                    <ul class="dropdown-menu border-0 rounded-0">
+                    <ol class="dropdown-menu border-0 rounded-0">
                         <li><a class="dropdown-item text-green" href="living-room.html">Living Room</a></li>
                         <li><a class="dropdown-item text-green" href="bedroom.html">Bedroom</a></li>
                         <li><a class="dropdown-item text-green" href="dining-room.html">Dining Room</a></li>
-                        <li><a class="dropdown-item text-green" href="work and study.html">Work And Study</a>
-                        </li>
+                        <li><a class="dropdown-item text-green" href="work and study.html">Work And Study</a></li>
                         <li><a class="dropdown-item text-green" href="decore.html">Decore</a></li>
                         <li><a class="dropdown-item text-green" href="kitchen.html">Kitchen</a></li>
                         <li><a class="dropdown-item text-green" href="bath.html">Bath And Laundary</a></li>
                         <li><a class="dropdown-item text-green" href="appliances.html">Appliances</a></li>
-                    </ul>
+                    </ol>
                 </div>
                 <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
@@ -46,22 +46,37 @@
                 </button>
                 <div class="collapse navbar-collapse" id="collapsibleNavId">
                     <form class="d-flex my-2 my-lg-0 me-3">
-                        <input class="form-control me-sm- py-2 ps-5 text-green fw-bold bg-lighter border-0" type="text"
-                            placeholder="Search">
+                        <input class=" me-sm- py-2 ps-3 text-green fw-bold bg-lighter border-0"
+                            placeholder="Search" list="category">
+                        <datalist id="category">
+                            <option value="Appliances"></option>
+                            <option value="Bath And Laundary"></option>
+                            <option value="Kitchen"></option>
+                            <option value="Work And Study"></option>
+                            <option value="Dining Room"></option>
+                            <option value="Bedroom"></option>
+                            <option value="Living Room"></option>
+                        </datalist>
+
                     </form>
-                    <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
+                    <ul class="navbar-nav ms-auto mt-2 mt-lg-0 hover">
                         <li class="nav-item">
                             <a class=" text-green active me-3 font-family text-decoration-none" href="home.html"
                                 aria-current="page">Home<span class="visually-hidden">(current)</span></a>
                         </li>
-                        <a class=" text-green text-decoration-none me-3 active font-family" href="about.html"
-                            aria-current="page">Sale<span class="visually-hidden">(current)</span></a>
+                        <li><a class=" text-green text-decoration-none me-3 active font-family" href="about.html" aria-current="page">Sale<span
+                                class="visually-hidden">(current)</span></a>
+                            </li>
 
 
-                        <a class=" text-green text-decoration-none me-3 active font-family" href="contact.html"
-                            aria-current="page">Contact<span class="visually-hidden">(current)</span></a>
-                        <a class=" text-green text-decoration-none me-3 active font-family" href="feedback.html"
-                            aria-current="page">Sign Up/Sign In<span class="visually-hidden">(current)</span></a>
+                        <li>
+                            <a class=" text-green text-decoration-none me-3 active font-family" href="contact.html" aria-current="page">Contact<span
+                                    class="visually-hidden">(current)</span></a>
+                        </li>
+                      <li>
+                        <a class=" text-green text-decoration-none me-3 active font-family" href="feedback.html" aria-current="page">Sign
+                            Up/Sign In<span class="visually-hidden">(current)</span></a>
+                      </li>
                     </ul>
 
                     <i class="fa-regular fa-heart text-center pt-2 ps-3" style="color: #356f63;" data-bs-toggle="modal"
@@ -74,8 +89,10 @@
         </nav>
     </div>
     </div>
+    <!-- Navbar end here -->
 
-    </header>
+    <!-- carousel start here -->
+
     <div class="container-fluid p-0 carousel-inner py-5">
         <div class="row">
             <div id="carouselExampleDark" class="carousel carousel-dark slide">
@@ -93,7 +110,7 @@
                         <div class="carousel-caption d-none d-md-block">
                             <h4 class="text-lighter bg-green py-2">Bring Home The New <br> for look that refreshing!
                             </h4>
-                            <button type="button" class="border-0 py-1 px-2 fw-bold text-green">Shop Now</button>
+                            <button type="button" class="border-0 py-1 px-2 fw-bold text-green skew">Shop Now</button>
                         </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="2000">
@@ -101,7 +118,7 @@
                         <div class="carousel-caption d-none d-md-block">
                             <h4 class="text-lighter bg-green py-2">Bring Home The New <br> for look that refreshing!
                             </h4>
-                            <button type="button" class="border-0 py-1 px-2 fw-bold text-green">Shop Now</button>
+                            <button type="button" class="border-0 py-1 px-2 fw-bold text-green skew">Shop Now</button>
                         </div>
                     </div>
                     <div class="carousel-item">
@@ -109,7 +126,7 @@
                         <div class="carousel-caption d-none d-md-block">
                             <h4 class="text-lighter bg-green py-2">Bring Home The New <br> for look that refreshing!
                             </h4>
-                            <button type="button" class="border-0 py-1 px-2 fw-bold text-green">Shop Now</button>
+                            <button type="button" class="border-0 py-2 px-4 fw-bold text-green skew">Shop Now</button>
                         </div>
                     </div>
                 </div>
@@ -120,7 +137,7 @@
                 </button>
                 <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
                     data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="carousel-control-next-icon " aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
@@ -134,6 +151,9 @@
             </div> -->
 
     </div>
+    <!-- carousel end here -->
+
+    <!-- offer part start here -->
     <div class="container-fluid py-2">
         <div class="container bg-green py-4">
             <div class="container py-5 border-offer d-none d-md-block">
@@ -147,6 +167,9 @@
             </div>
         </div>
     </div>
+    <!-- offer part end here -->
+
+    <!-- main part start here -->
     <main>
         <div class="container-fluid py-5">
             <div class="container">
@@ -197,7 +220,7 @@
                                         <img src="images/card2.jpg" alt="" class="w-75">
                                         <h5 class="card-title text-green font-family pt-2">Homeware</h5>
                                         <p class="card-text text-light fw-bold">Under 2999</p>
-                                        <a href="read.html" class="btn bg-green text-white rounded-5 px-5">Read MORE</a>
+                                        <a href="read.html" class="btn bg-green text-white rounded-5 px-5">Read More</a>
                                     </div>
                                 </div>
                             </div>
@@ -207,7 +230,7 @@
                                         <img src="images/card1.jpg" alt="" class="w-75">
                                         <h5 class="card-title text-green font-family pt-2">Furniture</h5>
                                         <p class="card-text text-light fw-bold">Under 4999</p>
-                                        <a href="read.html" class="btn bg-green text-white rounded-5 px-5">Read MORE</a>
+                                        <a href="read.html" class="btn bg-green text-white rounded-5 px-5">Read More</a>
                                     </div>
                                 </div>
                             </div>
@@ -332,8 +355,9 @@
         </div>
         </div>
         </div>
-
     </main>
+    <!-- main part end here -->
+
     <footer>
         <!-- place footer here -->
         <div class="container-fluid bg-lighter py-5">
